--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,10 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@600&family=Lato:wght@400;700&family=Montserrat:wght@300;400;500;600;700&family=Oswald:wght@500;600&display=swap"
+    rel="stylesheet"
+  />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
