--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     href="https://fonts.googleapis.com/css2?family=Inter:wght@600&family=Lato:wght@400;700&family=Montserrat:wght@300;400;500;600;700&family=Oswald:wght@500;600&display=swap"
     rel="stylesheet"
   />
+  <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -27,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>S.H Jondhale Polytechnic</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
